@startuml
entity Profile {
	*id : uuid
	name : text
	*created_at : datetime
	*updated_at : datetime
}
entity User {
	*id : uuid
	name : text
	email : text
	login : text
	password : text
	password_updated_at : datetime
	created_at : datetime
	updated_at : datetime
}
entity UserProfile {
	*profile_id : uuid
	*user_id : uuid
	*associated_at : datetime
}
entity UserProfileHistory {
	*id_user_profile_history : uuid
	*profile_id : uuid
	*user_id : uuid
	*associated_at : datetime
	disassociated_at : datetime
}
entity SystemResource {
	*id : uuid
	resource_name : text
	details : text
	*created_at : datetime
	*updated_at : datetime
}
entity Permissao {
	*id : uuid
	profile_id : uuid
	user_id : uuid
	resource_id : uuid
	access_granted : text
	grant_date_time : datetime
}
entity HistoricoConcessaoAcesso {
	*id : uuid
	permission_id : uuid
	granted_date_time : datetime
	revocation_date_time : datetime
}
entity Country {
	*id : uuid
	*name : text
	abbreviation : text
	*created_at : datetime
	*updated_at : datetime
}
entity Language {
	*id : uuid
	*name : text
	abbreviation : text
	created_at : datetime
}
entity LanguageCountry {
	*country_id : uuid
	*language_id : uuid
	*created_at : datetime
}

entity Translator {
	*id : uuid
	*language_id : uuid
	country_id : uuid
	*name : text
	*created_at : datetime
}

Language ||--|{ Translator

entity Author {
	*id : uuid
	*nome : text
	*criado_em : datetime
}

entity Version {
	*id : uuid
	*translator_id : uuid
	*language_id : uuid
	country_id : uuid
	*name : text
	details : text
	*source : text
	*created_at : datetime
	*updated_at : datetime
}

Language ||--|{ Version
Translator ||--|{ Version
Country ||--|{ Version

entity BookVersion {
	*book_version_id : uuid
	*book_id : uuid
	*version_id : uuid
	*source : text
	name_version : text
	details : text
	*created_at : datetime
	*updated_at : datetime
}
entity Book {
	*id : uuid
	*name : text
	author_id : uuid
	estimated_year_written : number
	original_languageid : uuid
	apocryphon : bool
	description : text
	details : text
	bible_part : text
	*created_at : datetime
	*updated_at : datetime
}

Author ||--|{ Book
Language ||--|{ Book
BookVersion }|--|{ Book
Version }|--|{ BookVersion

entity Chapter {
	*id : uuid
	book_id : uuid
	number : number
	apocryphon : bool
	details : text
	*created_at : datetime
}

Book ||--|{ Chapter

entity Verse {
	*id : uuid
	chapter_id : uuid
	book_version_id : uuid
	language_id : uuid
	content : text
	source : text
	*created_at : datetime
	*updated_at : datetime
}

Chapter ||--|{ Verse
Book ||--|{ Verse
Version ||--|{ Verse
Language ||--|{ Verse
@enduml